testdata/baselines/reference/submodule/conformance/generatorTypeCheck38(alwaysstrict=false).errors.txt
error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
generatorTypeCheck38.ts(1,5): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
generatorTypeCheck38.ts(4,19): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.


!!! error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
==== generatorTypeCheck38.ts (2 errors) ====
    var yield;
        ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
    function* g() {
        yield 0;
        var v: typeof yield;
                      ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
    }